Review issue links for tree view examples
For each of the following example pages,
added a paragraph with a link to a review issue for that page.
1. examples/treeview/treeview-1/treeview-1a.html
2. examples/treeview/treeview-1/treeview-1b.html
3. examples/treeview/treeview-2/treeview-2a.html
4. examples/treeview/treeview-2/treeview-2b.html

--- a/examples/treeview/treeview-1/treeview-1b.html
+++ b/examples/treeview/treeview-1/treeview-1b.html
@@ -19,17 +19,19 @@
   <body>
     <main>
       <h1>File Directory Treeview Example Using Declared Properties</h1>
-
+      <p>
+        Code is complete for this example. 
+        Feedback and progress on editorial work on this page are being tracked in 
+        <a href="https://github.com/w3c/aria-practices/issues/224">issue 224.</a>
+      </p>
       <p>This example implements the features of the <a href="../../../#TreeView">Treeview Design Pattern</a> for simulation of a file selector.   This example explicitly sets the values for <code>aria-setsize</code>, <code>aria-posinset</code> and <code>arial-level</code>, which override any browser compuuted values.</p>
-
       <p>Similar examples include: </p>
       <ul>
         <li><a href="../treeview-1/treeview-1a.html">File Directory Treeview using <em>computed</em> properties</a></li>
         <li><a href="../treeview-2/treeview-2a.html">Navigation Treeview using <em>computed</em> properties</a></li>
         <li><a href="../treeview-2/treeview-2b.html">Navigation Treeview using <em>declared</em> properties</a></li>
       </ul>
-
-      <section aria-labelledby="start">
+      <section>
         <h2 id="start">Example</h2>
         <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep start" aria-label="Start of"></div>
         <div id="ex1">
@@ -410,7 +412,6 @@
         </div>
         <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep start" aria-label="End of"></div>
        </section>
-
        <section>
           <h2>Accessibility Features</h2>
           <ul>
