--- a/examples/treeview/treeview-2/treeview-2a.html
+++ b/examples/treeview/treeview-2/treeview-2a.html
@@ -19,6 +19,11 @@
   <body>
     <main>
       <h1>Navigation Treeview Example Using Computed Properties</h1>
+      <p>
+        Code is complete for this example. 
+        Feedback and progress on editorial work on this page are being tracked in 
+        <a href="https://github.com/w3c/aria-practices/issues/225">issue 225.</a>
+      </p>
   <p>
     This example implements the features of the
     <a href="../../../#TreeView">Treeview Design Pattern</a>
