--- a/examples/treeview/treeview-2/treeview-2b.html
+++ b/examples/treeview/treeview-2/treeview-2b.html
@@ -19,17 +19,20 @@
   <body>
     <main>
       <h1>Navigation Treeview Example Using Declared Properties</h1>
+      <p>
+        Code is complete for this example. 
+        Feedback and progress on editorial work on this page are being tracked in 
+        <a href="https://github.com/w3c/aria-practices/issues/226">issue 226.</a>
+      </p>
       <p>his example implements the features of the
     <a href="../../../#TreeView">Treeview Design Pattern</a>
     for navigating and selecting a link in a large set of hierarchically organized links.  It is important in this example that the <code>role=treeitem</code> overrides the default role of link for the <code>a</code> elements, since a <code>treeitem</code> widget cannot contain any interactive elements (e.g. a link).  This example also explicitly sets the values for <code>aria-setsize</code>, <code>aria-posinset</code> and <code>arial-level</code>, which override any browser compuuted values.  </p>
-
       <p>Similar examples include: </p>
       <ul>
         <li><a href="../treeview-1/treeview-1a.html">File Directory Treeview using <em>computed</em> properties</a></li>
         <li><a href="../treeview-1/treeview-1b.html">File Directory Treeview using <em>declared</em> properties</a></li>
         <li><a href="../treeview-2/treeview-2a.html">Navigation Treeview using <em>computed</em> properties</a></li>
       </ul>
-
       <section>
         <h2 id="ex_label">Example</h2>
         <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
