--- a/examples/treeview/treeview-1/treeview-1a.html
+++ b/examples/treeview/treeview-1/treeview-1a.html
@@ -20,17 +20,19 @@
   <body>
     <main>
       <h1>File Directory Treeview Example Using Computed Properties</h1>
+      <p>
+        Code is complete for this example. 
+        Feedback and progress on editorial work on this page are being tracked in 
+        <a href="https://github.com/w3c/aria-practices/issues/223">issue 223.</a>
+      </p>
       <p>This example implements the features of the <a href="../../../#TreeView">Treeview Design Pattern</a> for simulation of a file selector.  This example relies on the browser to compute values for <code>aria-setsize</code>, <code>aria-posinset</code> and <code>arial-level</code>.   The ARIA 1.0 Spectification for these properties states the browser can compute these values, but is not required to.</p>
-
       <p>Similar examples include: </p>
       <ul>
         <li><a href="../treeview-1/treeview-1b.html">File Directory Treeview using <em>declared</em> properties</a></li>
         <li><a href="../treeview-2/treeview-2a.html">Navigation Treeview using <em>computed</em> properties</a></li>
         <li><a href="../treeview-2/treeview-2b.html">Navigation Treeview using <em>declared</em> properties</a></li>
       </ul>
-
-
-       <section aria-labelledby="start">
+       <section>
         <h2 id="start">Example</h2>
         <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep start" aria-label="Start of"></div>
         <div id="ex1">
