Feedback link for layout grid examples
Changed examples/grid/LayoutGrids.html
to remove link to development issue 105 and replace it with link to feedback issue 227.

--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -17,11 +17,8 @@
   <main>
   <h1>Layout Grid Examples</h1>
   <p>
-    <strong>Note:</strong>
-    This example is not yet complete.
-    When it is ready for review, feedback will be welcom in
-    <!-- Please provide feedback on this example in -->
-    <a href="https://github.com/w3c/aria-practices/issues/105">issue 105</a>.
+    Please provide feedback on this example in
+    <a href="https://github.com/w3c/aria-practices/issues/227">issue 227.</a>
   </p>
   <p>
     The following examples demonstrate how the
