Grid example links and other issue links
In aria-practices.html:
Updated link text of example page links in grid design pattern.

examples/link/link.html:
Added link to issue 228.

examples/slider/slider-1.html:
Added link to issue 229.

examples/slider/slider-2.html:
Added link to issue 230.

--- a/examples/link/link.html
+++ b/examples/link/link.html
@@ -10,8 +10,11 @@
   <script src="js/link.js" type="text/javascript"></script>
 </head>
 <body>
-
     <h1>ARIA Example: <code>link</code> role</h1>
+    <p>
+      This page requires updates as described in 
+      <a href="https://github.com/w3c/aria-practices/issues/228">issue 228.</a>
+    </p>
 
   <main>
 
