--- a/examples/slider/slider-1.html
+++ b/examples/slider/slider-1.html
@@ -29,6 +29,10 @@
   <main>
 
     <h1>Color Picker Using Slider Widgets</h1>
+    <p>
+      This example page needs updates as described in 
+      <a href="https://github.com/w3c/aria-practices/issues/229">issue 229.</a>
+    </p>
     <p>Change sliders to update the background color of box (note: the box is visually left of the 3 slider controls), with the HEX color value in a form control.</p>
 
     <h2 id="example1_h2">Horizontal Sliders</h2>
