--- a/examples/slider/slider-2.html
+++ b/examples/slider/slider-2.html
@@ -13,10 +13,12 @@
   <header>
     <h1>ARIA Example: Vertical Sider and Sliders using <code>aria-valuetext</code></h1>
   </header>
-
   <main>
-
     <h1>Thermostat Controls using ARIA Sliders</h1>
+    <p>
+      This example needs revisions as described in 
+      <a href="https://github.com/w3c/aria-practices/issues/230">issue 230.</a>
+    </p>
     <p>Change sliders to set values for setting a vertical temperature, fan speed and heat/air conditioning.  The examples also use <code>aria-valuetext</code> property.</p>
 
     <div role="region" aria-label="Examples">
