--- a/aria-practices.html
+++ b/aria-practices.html
@@ -881,9 +881,9 @@
       <section class="notoc">
           <h4>Examples</h4>
           <ul>
-            <li><a href="examples/grid/LayoutGrids.html">Layout Grids</a>: Three example implementations of grids that are used to lay out widgets, including a collection of navigation links, a message recipients list, and a set of search results.</li>
-            <li><a href="examples/grid/dataGrids.html">Data Grids</a>: Three example implementations of grid that include features relevant to presenting tabular information, such as content editing, sort, and column hiding.</li>
-            <li><a href="examples/grid/advancedDataGrid.html">Advanced Data Grid</a>: Example of a grid with behaviors and features similar to a typical spreadsheet, including cell and row selection.</li>
+            <li><a href="examples/grid/LayoutGrids.html">Layout Grid Examples</a>: Three example implementations of grids that are used to lay out widgets, including a collection of navigation links, a message recipients list, and a set of search results.</li>
+            <li><a href="examples/grid/dataGrids.html">Data Grid Examples</a>: Three example implementations of grid that include features relevant to presenting tabular information, such as content editing, sort, and column hiding.</li>
+            <li><a href="examples/grid/advancedDataGrid.html">Advanced Data Grid Example</a>: Example of a grid with behaviors and features similar to a typical spreadsheet, including cell and row selection.</li>
           </ul>
         </section>
     </section>
