--- a/examples/breadcrumb/index.html
+++ b/examples/breadcrumb/index.html
@@ -15,7 +15,7 @@
         <a href="https://github.com/w3c/aria-practices/issues/187">issue 187.</a>
         Please provide any additional feedback in this issue.
       </p>
-      <p>This example shows the <a href="../../aria-practices.html#breadcrumb">breadcrumb design pattern</a>.</p>
+      <p>This example shows the <a href="../../#breadcrumb">breadcrumb design pattern</a>.</p>
 
 	  <p>
 	    It is recommended authors use an ordered list to structure the list of links.
