--- a/aria-practices.html
+++ b/aria-practices.html
@@ -20,7 +20,7 @@
   </section>
 
   <section id="sotd">
-  	<p>This is a <a href="https://www.w3.org/2015/Process-20150901/#RecsWD">Working Draft</a> by the <a href="http://www.w3.org/WAI/ARIA/">Accessible Rich Internet Applications Working Group</a> of the <a href="http://www.w3.org/WAI/">Web Accessibility Initiative</a>. It supports the <a href="http://www.w3.org/TR/wai-aria-1.1/" class="specref">WAI-ARIA 1.1</a> [<cite><a href="#bib-WAI-ARIA" class="bibref">WAI-ARIA</a></cite>] specification, providing detailed advice and examples beyond what would be appropriate to a technical specification but which are important to understand the specification. This version includes additional refinements to the authoring guidance.</p>
+  	<p>This is a <a href="https://www.w3.org/2015/Process-20150901/#RecsWD">Working Draft</a> by the <a href="http://www.w3.org/WAI/ARIA/">Accessible Rich Internet Applications Working Group</a> of the <a href="http://www.w3.org/WAI/">Web Accessibility Initiative</a>. It supports the <a href="" class="specref">WAI-ARIA 1.1</a> [<cite><a href="#bib-WAI-ARIA" class="bibref">WAI-ARIA</a></cite>] specification, providing detailed advice and examples beyond what would be appropriate to a technical specification but which are important to understand the specification. This version includes additional refinements to the authoring guidance.</p>
     <p>
       This draft includes only a portion of content planned for the complete WAI-ARIA Authoring Practices 1.1.
       To see what is planned for future drafts and releases, review the 
