Fixing redirects, partial URIs

--- a/examples/landmarks/complementary.html
+++ b/examples/landmarks/complementary.html
@@ -176,9 +176,9 @@
           <aside aria-labelledby="id3">
             <h2 id="id3">Related W3C Specs</h2>
             <ul>
-              <li><a href="http://www.w3.org/TR/WCAG">WCAG 2.0 Specification</a></li>
-              <li><a href="http://www.w3.org/TR/html5">HTML5 Specification</a></li>
-              <li><a href="http://www.w3.org/TR/wai-aria">ARIA Specification</a></li>
+              <li><a href="http://www.w3.org/TR/WCAG/">WCAG 2.0 Specification</a></li>
+              <li><a href="http://www.w3.org/TR/html5/">HTML5 Specification</a></li>
+              <li><a href="http://www.w3.org/TR/wai-aria/">ARIA Specification</a></li>
               <li><a href="https://www.w3.org/TR/wai-aria-practices/">ARIA Authoring Practices</a></li>
               <li><a href="https://www.w3.org/TR/accname-aam-1.1/">ARIA Accessible Name Calc</a></li>
               <li><a href="https://www.w3.org/TR/aria-in-html/">ARIA in HTML5</a></li>
