--- a/examples/landmarks/resources.html
+++ b/examples/landmarks/resources.html
@@ -68,7 +68,7 @@
                             <li><a href="http://whatsock.com/training/matrices/visual-aria.htm">The Visual ARIA Bookmarklet</a></li>
                             <li><a href="http://paypal.github.io/skipto/">SkipTo, version 2.0</a> (PayPal)</li>
                             <li><a href="http://ainspector.github.io/">AInspector Sidebar for Firefox</a> (Landmark Rule Category)</li>
-                            <li><a href="http://fae.disability.illinois.edu/">Functional Accessibility Evaluator 2.0</a> (Landmark Rule Category)</li>
+                            <li><a href="https://fae.disability.illinois.edu/">Functional Accessibility Evaluator 2.0</a> (Landmark Rule Category)</li>
                           </ul>
 
                         </section>  
@@ -94,9 +94,9 @@
                     <aside aria-labelledby="id3">
                       <h2 id="id3">Related W3C Specs</h2>
                       <ul>
-                        <li><a href="http://www.w3.org/TR/WCAG">WCAG 2.0 Specification</a></li>
-                        <li><a href="http://www.w3.org/TR/html5">HTML5 Specification</a></li>
-                        <li><a href="http://www.w3.org/TR/wai-aria">ARIA Specification</a></li>
+                        <li><a href="http://www.w3.org/TR/WCAG/">WCAG 2.0 Specification</a></li>
+                        <li><a href="http://www.w3.org/TR/html5/">HTML5 Specification</a></li>
+                        <li><a href="http://www.w3.org/TR/wai-aria/">ARIA Specification</a></li>
                         <li><a href="https://www.w3.org/TR/wai-aria-practices/">ARIA Authoring Practices</a></li>
                         <li><a href="https://www.w3.org/TR/accname-aam-1.1/">ARIA Accessible Name Calc</a></li>
                         <li><a href="https://www.w3.org/TR/aria-in-html/">ARIA in HTML5</a></li>
