Fixing tabindex for example button

--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -41,7 +41,7 @@
               <code>div</code>
             </td>
             <td>
-              <div role="button" id="print">Print Page</div>
+              <div tabindex="0" role="button" id="print">Print Page</div>
             </td>
             <td>
               <ul>
